syntax = "proto3";

option csharp_namespace = "DiscountCodeServer.Protos";

service DiscountCodeService {
  rpc GenerateCodes (GenerateRequest) returns (GenerateResponse);
  rpc UseCode (UseCodeRequest) returns (UseCodeResponse);
}

message GenerateRequest {
  uint32 count = 1;  // ushort in C#
  uint32 length = 2; // byte in C#
}

message GenerateResponse {
  bool result = 1;
  repeated string codes = 2; // Add this to return generated codes
}

message UseCodeRequest {
  string code = 1; // max 8 chars
}

message UseCodeResponse {
  enum ResultCode {
    SUCCESS = 0;
    NOT_FOUND = 1;
    INVALID = 2;
    ALREADY_USED = 3;
    SERVER_ERROR = 4;
  }
  ResultCode result = 1;
}